# vtc-bot

./: .env  .gitignore  command_handler.py  config.flake8  contributing.md  main.py  message_handler.py  pyproject.toml  readme.md  ru-readme.md  schema.sql  test.py  test2.py  test3.py  utils.py
.github/workflows/: checks.yml
bot/: _types.py  abc.py  attrs.py  commands.py  config.py  converters.py  data.py  embeds.py  exceptions.py  flags.py  help.py  log-config.yaml  main.py  mock.py  text_objects.py  utils.py
bot/objects/: commands.py  exceptions.py  text.py  user_objects.py
docs/: FAQ.rst  conf.py  diagram.html  index.rst
locale/: lokalise.pot  vtc-bot.pot
locale/en/LC_MESSAGES/: vtc-bot.mo  vtc-bot.po
locale/ru/LC_MESSAGES/: lokalise.mo  lokalise.po  vtc-bot.mo  vtc-bot.po
objects/: commands.py  exceptions.py  stubs.py  text.py  user_objects.py
scripts/: droptablesdb.sh  dumpdb.sh  setupdb.sh
tests/: conftest.py  test_commands.py  test_exceptions.py  test_help.py  test_main.py  test_text.py  test_user_objects.py
tests/test_commands/: bad_cases.py  coincidence_cases.py  conftest.py  good_cases.py  test_commands.py
tests/test_converters/: conftest.py  test_converters.py
tests/test_converters/test_main_expression/: test_main.py
tests/test_converters/test_search_expression/: test_analyzeWildcard.py  test_analyzeWildcardSE.py  test_convert_and_checkExpr.py  test_extract.py
tests/test_converters/test_short_search_expression/: test_analyzeWildc.py  test_analyzeWildcardSSE.py  test_checkExpr.py  test_convert.py  test_getitem.py  test_short_search_convert.py
tests/test_converters/test_special_expression/: test_special_convert.py
tests/test_data/: conftest.py  test_data_group_analyz.py  test_discord_obj_group.py
tests/test_data/test_DB_obj_group/: all_db_objects_group_subs.py  good_cases.py  test_act_group.py  test_common_funcs.py  test_guild_description.py  test_log_target.py
tests/test_data/test_DB_objects_group/: conftest.py  good_cases.py  test_act_group.py  test_target_group.py
tests/test_data/test_discord_obj_group/: test_common.py  test_extract_data.py
tests/test_help/: conftest.py  test_help.py
tests/test_with_db/: test_converters.py
tests/test_without_db/: conftest.py
