[tool.poetry]
name = "discord-bot"
version = "0.0.0"
description = "Публичная версия бота для Discord"
authors = ["GREEN Corporation <vtcgreenlogistic@gmail.com>"]
license = "GPL-2.0"
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
logging = "^0.4.9.6"
pynacl = "^1.5.0"
discord-py = "^2.2.2"
psycopg = "^3.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
dpytest = "^0.6.4"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.main:runForPoetry"
