[tool.poetry]
name = "discord-bot"
version = "2.0.0"
description = "Публичная версия бота для Discord"
authors = ["GREEN Corporation <vtcgreenlogistic@gmail.com>"]
license = "GPL-2.0"
readme = "readme.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
logging = "^0.4.9.6"
pynacl = "^1.5.0"
discord-py = "^2.2.2"
psycopg = "^3.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
dpytest = "^0.6.4"
sphinx = "^7.0.1"
flake8 = "^6.1.0"
mypy = "^1.3.0"
flake8-vcs-ext = "^2.0.1"
flake8-isort = "^6.0.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "bot.main:runForPoetry"

[tool.flake8]
ignore = ['W191', 'E302', 'W191', 'W292', 'E305', 'E261', 'W293', 'E128', 'E122', 'E115', 'E262', 'E265', 'W504']
exclude = "./docs/*"

[tool.isort]
multi_line_output = 3
indent = "	"